added reviews for listings

--- a/Views/listings/index.ejs
+++ b/Views/listings/index.ejs
@@ -7,7 +7,7 @@
   <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-2">
     <% for (let listing of allListings){ %>
     <a href="/listings/<%= listing._id %>" class="Card-a">
-      <div class="card">
+      <div class="card-listing">
         <img
           class="card-img-top"
           src="<%= listing.image %>"
