--- a/Views/listings/show.ejs
+++ b/Views/listings/show.ejs
@@ -1,16 +1,21 @@
 <% layout("/layouts/bolierplate"); %>
 <body>
-  <div class="card offset-3" style="width: 20rem">
+  <div class="card-listing offset-3" style="width: 20rem">
     <br />
-    <img src="<%= listing.image %>" class="card-img-top cardshow" alt="....Image not uploaded" />
+    <h5 class="card-title"> <%= listing.title %></h5>
+    <img
+      src="<%= listing.image %>"
+      class="card-img-top cardshow"
+      alt="....Image not uploaded"
+    />
     <br />
     <div class="offset-1">
       <div class="card-body">
-        <h5 class="card-title"><%= listing.title %></h5>
+       <br/>
         <p class="card-text"><%= listing.description %></p>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">
+      <ul class="list-group list-group-flush" >
+        <li class="list-group-item " >
           &#8377; <%= listing.price.toLocaleString("en-IN") %>
         </li>
         <li class="list-group-item"><%= listing.location %></li>
@@ -28,7 +33,10 @@
             </div>
             <div class="col">
               <div class="p-3">
-                <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" >
+                <form
+                  method="POST"
+                  action="/listings/<%= listing._id %>?_method=DELETE"
+                >
                   <button class="btn btn-primary">Delete</button>
                 </form>
               </div>
@@ -36,6 +44,56 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="col-7 offset-3 mb-3">
+    <hr />
+    <h4>Leave a Review</h4>
+    <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
+      <div class="mb-3 mt-3">
+        <label for="rating">Rating</label>
+        <input
+          type="range"
+          min="1"
+          max="5"
+          id="rating"
+          name="review[rating]"
+          class="form-range"
+          required
+          style="width: 10rem"
+        />
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="Comment">Comment</label>
+        <textarea
+          name="review[comment]"
+          id="comment"
+          cols="5"
+          rows="5"
+          class="form-control"
+          required
+        ></textarea>
+        <div class="valid-feedback"> Looks good!    </div>
+        <div class="invalid-feedback"> Please add Comment. </div>
+      </div>
+      <button btn btn-outline-info>Submit</button>
+    </form>
+  <br/>
+
+    <h5>All Reviews</h5>
+    <div class="row">
+      <% for (review of listing.reviews) { %>
+        <div class="card col-4 mb-3 ms-3" >
+        <div class="card-body">
+          <h5 class="card-title">Pawan </h5>
+          <p class="card-text"><%= review.comment %> </p>
+          <p class="card-text"><%= review.rating %> Star's</p>
+          <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+          <button class="btn btn-dark">Delete</button>
+          </form>
+        </div>
+        </div>
+      <%} %>
     </div>
   </div>
 </body>
