--- a/Views/listings/show.ejs
+++ b/Views/listings/show.ejs
@@ -64,7 +64,7 @@
         />
       </div>
       <div class="mb-3 mt-3">
-        <label for="Comment">Comment</label>
+        <label for="comment">Comment</label>
         <textarea
           name="review[comment]"
           id="comment"
